--- a/Sanka2.html
+++ b/Sanka2.html
@@ -36,12 +36,12 @@ window.onload = function() {
 
             // テキストコンテンツを生成
             var heading = document.createElement('h2');
-            heading.textContent = 'Welcome to My Page';
+            heading.textContent = 'akaina site';
             heading.classList.add('glowing-text'); // 光るテキストのクラスを追加
             textContainer.appendChild(heading);
 
             var paragraph = document.createElement('p');
-            paragraph.textContent = 'This is some introductory text.';
+            paragraph.textContent = 'Play BGM.';
             paragraph.classList.add('glowing-text'); // 光るテキストのクラスを追加
             textContainer.appendChild(paragraph);
 
