--- a/bgm.html
+++ b/bgm.html
@@ -1,4 +1,14 @@
-document.addEventListener('visibilitychange', function() {
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Music Player</title>
+</head>
+<body>
+
+<script>  
+    document.addEventListener('visibilitychange', function() {
     if (!document.hidden) { // ページがアクティブになった場合
         var audioContext = new AudioContext();
         var audioElement = new Audio('path/to/bgm.mp3');
@@ -8,3 +18,6 @@ document.addEventListener('visibilitychange', function() {
         audioElement.play();
     }
 });
+</script>  
+</body>
+</html>
