--- a/bgm.html
+++ b/bgm.html
@@ -24,7 +24,7 @@
 
 function playBackgroundMusic() {
     var audioContext = new AudioContext();
-    var audioElement = new Audio('path/to/bgm.mp3');
+    var audioElement = new Audio('https://akaina0112.github.io/Test/bgm.mp3');
     var source = audioContext.createMediaElementSource(audioElement);
     source.connect(audioContext.destination);
     
