--- a/Sanka2.html
+++ b/Sanka2.html
@@ -129,7 +129,7 @@ document.addEventListener('DOMContentLoaded', function() {
   let index = 0;
   let currentTextElement = null;
 
-  function startTextAnimation() {
+  window.startTextAnimation = function() {
     mainImgDiv.style.display = 'none';
     mainImg2Div.style.display = 'block';
     
@@ -146,7 +146,7 @@ document.addEventListener('DOMContentLoaded', function() {
       currentTextElement = textElement; // Update current text element
       index++;
     }
-  }
+  };
 
   function applyAnimation(element) {
     element.style.opacity = '0';
