--- a/Sanka2.html
+++ b/Sanka2.html
@@ -95,14 +95,34 @@ document.addEventListener('DOMContentLoaded', function() {
   const mainImg2Div = document.getElementById('mainimg2');
   const textContainer = document.querySelector('.text-container');
   const texts = [
-    'テキスト1: 貴方の恋人になりたい',
-    'テキスト2: 知らなくても大丈夫',
-    'テキスト3: すれ違いの始まりはささくれみたい',
-    'テキスト4: 恋に落ちている',
-    'テキスト5: こっちを見てよ！',
-    'テキスト6: 恋に落ちている',
-    'テキスト7: 恋に落ちている',
-    'テキスト8: チョコより甘い温度で溶ける'
+    '互いに惹かれあって',
+    '僕達は出会ってしまう',
+    '僕はいつか貴方の恋人になりたい',
+    '貴方は何も知らない',
+    '知らなくても大丈夫',
+    'すれ違いの始まりはささくれみたい',
+    '恋に落ちている　恋に落ちている',
+    '恋に落ちている　こっちを見てよ！',
+    '恋に落ちている　恋に落ちている',
+    'チョコより甘い温度で溶ける',
+    '貴方の好きな人',
+    '僕はまだ名前も知らない',
+    '貴方のせいです',
+    '素敵な横顔のせいで',
+    '話しかけることが出来ない でも',
+    '僕はいつか貴方の恋人になりたい',
+    'あのね　今',
+    '恋に落ちている　恋に落ちている',
+    'チョコより甘い温度で溶ける',
+    '恋に落ちている　恋に落ちている',
+    '恋に落ちている　こっちを見てよ！',
+    '恋に落ちている　恋に落ちている',
+    'チョコより甘い温度で溶ける',
+    '恋に落ちている　恋に落ちている',
+    'チョコより甘い温度で溶ける',
+    '互いに惹かれあって',
+    '僕達は出会ってしまう',
+    '僕はいつか貴方の恋人になりたい'
   ];
   let index = 0;
   let currentTextElement = null;
